--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MI Aplicacion</title>>
+        <title>MI Aplicacion</title>
     </head>
 
     <body>
@@ -11,4 +11,6 @@
         </div>
     </body>
 
+    <script src="https://bernii.github.io/gauge.js/dist/gauge.min.js"> </script>
+    <script src="gauge.js"> </script>
 </html>
