--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
+  
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MI Aplicacion</title>
+        <title>Mi aplicacion</title>
     </head>
 
     <body>
-        <h1> Sensor 1 </h1>
+        <h1> Sensor 1</h1>
         <div>
-            <canvas id="MyGauge" width="1000" heigh="500"> </canvas> 
+            <canvas id="myGauge" width="1000" height="500"></canvas>
         </div>
+
+
     </body>
 
-    <script src="https://bernii.github.io/gauge.js/dist/gauge.min.js"> </script>
-    <script src="gauge.js"> </script>
+    <script src="https://bernii.github.io/gauge.js/dist/gauge.min.js"></script>
+    <script src="gauge.js"></script>
 </html>
