--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
         <div>
             <canvas id="myGauge" width="1000" height="500"></canvas>
         </div>
+        <div>
+            <canvas id="myChart"></canvas>
+        </div>
 
 
     </body>
 
     <script src="https://bernii.github.io/gauge.js/dist/gauge.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="gauge.js"></script>
+    <script src="myChart.js"></script>
 </html>
+
